# estudos-sql-model

./: .gitignore  README.md  main.py  pyproject.toml
src/app/: db.py  models.py  seed.py
